--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Beca EOI HTML5</title>
 </head>
 <body>
-<h1>Beca EOI HTML5</h1>
+<h1>Beca EOI HTML5.</h1>
+<h2>Modificación ejercicios.</h2>
 </body>
 </html>
