insercion de css y js

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
-    
+<html lang="es" dir="ltr">
 <head>
-    <title>Beca EOI HTML5</title>
+<title>Curso HTML5 EOI</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="css/practicaHTML5.css">
+<script type="text/javascript" src="js/practicaHTML5.js">
+</script>
 </head>
 <body>
-Jorge
+CURSO HTML5 EOI
 </body>
 </html>
