body, links y meta

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 <title>Curso HTML5 EOI</title>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link rel="icon" href="images/logoHTML5.png" type="image/png" sizes="16x16">
 <link rel="stylesheet" href="css/practicaHTML5.css">
 <script type="text/javascript" src="js/practicaHTML5.js">
 </script>
 </head>
 <body>
-CURSO HTML5 EOI
+    Este es el curso HTML5 de EOI. Vamos a aprender todo lo necesario para poder realizar
+    una página con HTML5 desde cero
 </body>
 </html>
